--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -14,9 +14,113 @@
       </div>
     </div> -->
 
+    <!-- INTRO
+    <div class="container section img-home">
+      <div class="row">
+        <div class="col-sm-3">
+          <a href="{% url 'clases_home' %}" class="big">
+            <div class="row relleno home-img-btn">
+              <p>Ver clases</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="{% url 'teoria_home' %}" class="big">
+            <div class="row relleno home-img-btn">
+              <p>Teoría</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="{% url 'grupos_home' %}" class="big">
+            <div class="row relleno home-img-btn">
+              <p>Equipos y TP finales</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="{% url 'trabajos_practicos' %}" class="big">
+            <div class="row relleno home-img-btn">
+              <p>Guía de Trabajos Prácticos</p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div> -->
+
+    <!-- INTRO PRUEBA -->
+    <div class="container section">
+      <div class="row row-caousel">
+        <div id="carousel-loi" class="carousel slide" data-ride="carousel">
+
+          <!-- Buttons -->
+          <div class="buttons-carousel">
+            <div class="row">
+              <div class="col-sm-6">
+                <a href="#teoria" class="big">
+                  <div class="row relleno home-img-btn">
+                    <p class="home-btn-text">Teoría</p>
+                  </div>
+                </a>
+              </div>
+              <div class="col-sm-6">
+                <a href="#practica" class="big">
+                  <div class="row relleno home-img-btn">
+                    <p class="home-btn-text">Práctica</p>
+                  </div>
+                </a>
+              </div>
+
+            </div>
+          </div>
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-loi" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-loi" data-slide-to="1"></li>
+            <li data-target="#carousel-loi" data-slide-to="2"></li>
+            <li data-target="#carousel-loi" data-slide-to="3"></li>
+            <li data-target="#carousel-loi" data-slide-to="4"></li>
+            <li data-target="#carousel-loi" data-slide-to="5"></li>
+            <li data-target="#carousel-loi" data-slide-to="6"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="/static/img/home_blur1.jpg" alt="...">
+            </div>
+            <div class="item">
+              <img src="/static/img/home_blur2.jpg" alt="...">
+            </div>
+            <div class="item">
+              <img src="/static/img/home_blur3.jpg" alt="...">
+            </div>
+            <div class="item">
+              <img src="/static/img/home_blur4.jpg" alt="...">
+            </div>
+            <div class="item">
+              <img src="/static/img/home_blur5.jpg" alt="...">
+            </div>
+            <div class="item">
+              <img src="/static/img/home_blur6.jpg" alt="...">
+            </div>
+            <div class="item">
+              <img src="/static/img/home_blur7.jpg" alt="...">
+            </div>
+          </div>
+          <!-- /Wrapper for slides -->
+
+
+        </div>
+      </div>
+    </div>
+    <!-- /carousel -->
+
     <!-- TEORÍA -->
     <div class="container section">
-      <h2 class="home"><a href="{% url 'teoria_home'%}"> Teoría de Procesos Industriales: </a></h2>
+      <div class="home-subtitle" id="teoria">
+        <h2 class="home"><a href="{% url 'teoria_home'%}"> Teoría de Procesos Industriales: </a></h2>
+      </div>
       <p class="home">¡Aprendé mirando!</p>
       <p class="home">¿Querés conocer más sobre algún proceso en particular? Mirá los videos y el material que seleccionamos.</p>
       <p class="home">¿Conocés nuevos materiales o proyectos que nos puedan servir para aprender mejor? ¡Animate a sugerirlo en nuestras unidades!</p>
@@ -29,7 +133,9 @@
 
     <!-- PRACTICA DE PROCESOS -->
     <div class="container section">
-      <h2 class="home">Práctica de Procesos Industriales</h2>
+      <div class="home-subtitle" id="practica">
+        <h2 class="home">Práctica de Procesos Industriales</h2>
+      </div>
       <p class="home"> La práctica de procesos industriales tiene como objetivo formar profesionales con conocimientos de las problemáticas reales de las empresas de la región. </p>
       <p class="home"> ¿Te animás a conocer todo lo que se puede lograr en un cuatrimestre? ¡Mirá los trabajos finales de los años anteriores y conocé los grupos de trabajo de este año!</p>
       <div class="row">
