added button to teoria_home

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -130,6 +130,13 @@
         </div>
       {% endfor %}
     </div>
+    <div class="container section">
+      <a href="{% url 'teoria_home' %}" class="big">
+        <div class="row relleno">
+          Ver todas las unidades
+        </div>
+      </a>
+    </div>
 
     <!-- PRACTICA DE PROCESOS -->
     <div class="container section">
