--- a/base/static/css/base.css
+++ b/base/static/css/base.css
@@ -77,6 +77,12 @@ span {
   color: white
 }
 
+.tercio {
+  width: 33%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .section {
   margin-bottom: 30px;
 }
@@ -138,6 +144,12 @@ div.inline-title {
 
 div #agregar {
   text-align: right;
+}
+
+.center-content * {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* HOME */
