--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -118,10 +118,8 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div id="wrapper">
-          <div class="container-loi">
 
-            <!-- Sidebar -->
+            <!-- Sidebar
             <div id="sidebar-wrapper">
               <div class="sidebar-loi">
                 <ul class="sidebar-nav">
@@ -139,7 +137,7 @@
                   <li><a href= "{% url 'trabajos_practicos' %}"> Guía de Trabajos Prácticos </a></li>
                 </ul>
               </div>
-            </div>
+            </div> -->
 
 
             <div class="row" id="page-content-wrapper" class="body-procesos">
@@ -152,18 +150,19 @@
             <div class="row">
               <p class="foot">Favicon made by <a href="http://www.flaticon.com/authors/egor-rumyantsev" title="Egor Rumyantsev">Egor Rumyantsev</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
             </div>
-          </div>
-        </div>
+
+
       </div>
     </div>
 
-   <!-- Menu Toggle Script -->
+   <!-- Menu Toggle Script
    <script>
    $("#menu-toggle").click(function(e) {
        e.preventDefault();
        $("#wrapper").toggleClass("toggled");
    });
    </script>
+   -->
 
    <!-- Google Analytics -->
    <script>
