--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -56,14 +56,14 @@
           <!-- Buttons -->
           <div class="buttons-carousel">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-xs-6">
                 <a href="#teoria" class="big">
                   <div class="row relleno home-img-btn">
                     <p class="home-btn-text">Teoría</p>
                   </div>
                 </a>
               </div>
-              <div class="col-sm-6">
+              <div class="col-xs-6">
                 <a href="#practica" class="big">
                   <div class="row relleno home-img-btn">
                     <p class="home-btn-text">Práctica</p>
