--- a/clases/templates/clases/editar_tp.html
+++ b/clases/templates/clases/editar_tp.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class="col-sm-12">
+  <div class="container section">
   {% if perms.clases %}
     <h2> Editar Trabajo Práctico </h2>
     <form method="POST" class="extended-form">{% csrf_token %}
@@ -12,6 +13,7 @@
   {% else %}
     <h4> No tenés autorización para editar los trabajos prácticos </h4>
   {% endif %}
+  </div>
 </div>
 
 {% endblock %}
