--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -143,7 +143,7 @@
             </div> -->
 
 
-            <div class="row" class="body-procesos">
+            <div class="row body-procesos">
               {% if warn_base %}
                 <p class="errorlist"> {{ warn_base }} </p>
               {% endif %}
